<resources>
    <string name="app_name">CSMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_classroom_info">ClassroomInfoActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Text Field Hints -->
    <string name="login_register_username">Username</string>
    <string name="login_register_password">Password</string>
    <string name="register_email">Email Address</string>
    <string name="register_password_again">Password Again</string>

    <!-- Default (Error) Strings for views -->
    <string name="title_default">TITLE HERE</string>
    <string name="content_default">CONTENT HERE</string>

    <!-- Button Strings -->
    <string name="login_register">Register</string>
    <string name="login_login">Login</string>
    <string name="register_sign_up">Sign Up</string>

    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>

    <string name="title_activity_room_avail_info">RoomAvailInfoActivity</string>
    <string name="title_activity_map_search">MapSearchActivity</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_add_place">AddPlaceActivity</string>
</resources>
