<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginRegister.Background" >

    <LinearLayout style="@style/LoginRegister.AltActionContainer">

        <Button
            android:id="@+id/button_login"
            style="@style/LoginRegister.AltActionButton"
            android:text="@string/login_login" />

    </LinearLayout>

    <LinearLayout style="@style/LoginRegister.ActionContainer" >

        <EditText
            android:id="@+id/username"
            style="@style/LoginRegister.EditText.Text"
            android:hint="@string/login_register_username" />

        <EditText
            android:id="@+id/email"
            style="@style/LoginRegister.EditText.Email"
            android:hint="@string/register_email" />

        <EditText
            android:id="@+id/password"
            style="@style/LoginRegister.EditText.Password"
            android:hint="@string/login_register_password" />

        <EditText
            android:id="@+id/passwordAgain"
            style="@style/LoginRegister.EditText.Password"
            android:hint="@string/register_password_again" />

        <Button
            android:id="@+id/button_signup"
            style="@style/LoginRegister.ActionButton"
            android:text="@string/register_sign_up" />

    </LinearLayout>

</LinearLayout>