<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    style="@style/LoginRegister.Background" >

    <!-- Login form -->
    <LinearLayout style="@style/LoginRegister.Container" >

        <EditText
            android:id="@+id/username"
            style="@style/LoginRegister.EditText.Text"
            android:hint="@string/login_register_username" />

        <EditText
            android:id="@+id/password"
            style="@style/LoginRegister.EditText.Password"
            android:hint="@string/login_register_password" />

        <Button
            android:id="@+id/action_button"
            style="@style/LoginRegister.Button"
            android:text="@string/login_login" />

    </LinearLayout>

</LinearLayout>